# ChessGame

./: CMakeLists.txt  Doxyfile.in  conanfile.py
cmake/: ChessGameConfig.cmake.in  ChessGameModelConfig.cmake.in
include/chess_game/: cursor.h  game.h  game_metadata.h  game_tree.h  game_types.h  move_tree.h  tree.h
include/chess_game_model/: game.h  game_metadata.h
include/chessgame/: cursor.h  game.h  metadata.h  move_matcher.h  pgn.h  san.h  tree.h  types.h
pgn_parser/: CMakeLists.txt  pgn_database.cpp  pgn_database.h  pgn_parser.cpp
src/: cursor.cpp  game.cpp  game_metadata.cpp  game_tree.cpp  game_types.cpp  metadata.cpp  move_matcher.cpp  move_tree.cpp  pgn.cpp  san.cpp  tree.cpp  types.cpp
test/: .clang-tidy  CMakeLists.txt
test/src/: move_matcher_test.cpp  pgn_lexer_test.cpp  pgn_parser_test.cpp  pgn_writer_test.cpp  san_generator_test.cpp  san_move_matcher_test.cpp  san_parser_test.cpp
